touching up the details page and fixing a little spacing

--- a/css/detail.css
+++ b/css/detail.css
@@ -15,3 +15,12 @@
 #details{
     width:100%;
 }
+
+.title h1{
+    font-size:45px;
+}
+
+.back_div{
+    justify-content: center; 
+    text-align:center; 
+}
