--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,7 +21,7 @@
     top: 0; 
     left: 0;
     width:100%;
-    height:10%;
+    height:120px;
   }
 
 
