--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 #content{
     width:100%;
     height:100%;
-    margin-top: 12%;
+    margin-top: 130px;
     padding:3%;
     padding-left: 15%;
     padding-right: 15%;
